fix overlapping countdown

--- a/css/countdown_style.css
+++ b/css/countdown_style.css
@@ -7,6 +7,7 @@
   right: 0;
   margin: auto;
   height: 310px;
+  z-index: -10;
 }
 
 .countdown_title {
